Fix entities table alignment

--- a/src/app/pages/components/advanced-entities-table/advanced-entities-table.component.scss
+++ b/src/app/pages/components/advanced-entities-table/advanced-entities-table.component.scss
@@ -110,6 +110,13 @@ mat-checkbox {
   align-items: center;
 }
 
+.cell--align-right {
+  .wrapper {
+    display: block;
+    text-align: right;
+  }
+}
+
 table-pagination {
   display: block;
   background: #ffffff;
